Parser/errors/c2050.txt
+ exit 0
Executing(%build): /bin/sh -e /usr/src/tmp/rpm-tmp.54651
+ umask 022
+ /bin/mkdir -p /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ cd c2050-0.4
+ cd c2050-0.4
+ make 'CFLAGS=-pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto'
+ make 'CFLAGS=-pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto'
make: Entering directory '/usr/src/RPM/BUILD/c2050-0.4'
make: Entering directory '/usr/src/RPM/BUILD/c2050-0.4'
gcc -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -c c2050.c
gcc -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -c c2050.c
gcc -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -c c2050.c
c2050.c: In function 'ClearBuffer':
c2050.c: In function 'ClearBuffer':
c2050.c: In function 'ClearBuffer':
c2050.c:65:12: error: type defaults to 'int' in declaration of 'i' [-Wimplicit-int]
c2050.c:65:12: error: type defaults to 'int' in declaration of 'i' [-Wimplicit-int]
c2050.c:65:12: error: type defaults to 'int' in declaration of 'i' [-Wimplicit-int]
   65 |   register i;
   65 |   register i;
   65 |   register i;
      |            ^
      |            ^
      |            ^
      |            ^
c2050.c: At top level:
c2050.c: At top level:
c2050.c: At top level:
c2050.c: At top level:
c2050.c:72:1: error: return type defaults to 'int' [-Wimplicit-int]
c2050.c:72:1: error: return type defaults to 'int' [-Wimplicit-int]
c2050.c:72:1: error: return type defaults to 'int' [-Wimplicit-int]
c2050.c:72:1: error: return type defaults to 'int' [-Wimplicit-int]
   72 | SweepBuffer_Init (struct tSweepBuffer *SweepBuffer, int bytesize)
   72 | SweepBuffer_Init (struct tSweepBuffer *SweepBuffer, int bytesize)
   72 | SweepBuffer_Init (struct tSweepBuffer *SweepBuffer, int bytesize)
   72 | SweepBuffer_Init (struct tSweepBuffer *SweepBuffer, int bytesize)
      | ^~~~~~~~~~~~~~~~
      | ^~~~~~~~~~~~~~~~
      | ^~~~~~~~~~~~~~~~
      | ^~~~~~~~~~~~~~~~
c2050.c: In function 'PrintSweep':
c2050.c: In function 'PrintSweep':
c2050.c: In function 'PrintSweep':
c2050.c: In function 'PrintSweep':
c2050.c:149:12: error: type defaults to 'int' in declaration of 'i' [-Wimplicit-int]
c2050.c:149:12: error: type defaults to 'int' in declaration of 'i' [-Wimplicit-int]
c2050.c:149:12: error: type defaults to 'int' in declaration of 'i' [-Wimplicit-int]
c2050.c:149:12: error: type defaults to 'int' in declaration of 'i' [-Wimplicit-int]
  149 |   register i;
  149 |   register i;
  149 |   register i;
  149 |   register i;
      |            ^
      |            ^
      |            ^
      |            ^
c2050.c: In function 'LineSum':
c2050.c: In function 'LineSum':
c2050.c: In function 'LineSum':
c2050.c:178:12: error: type defaults to 'int' in declaration of 'i' [-Wimplicit-int]
c2050.c:178:12: error: type defaults to 'int' in declaration of 'i' [-Wimplicit-int]
c2050.c:178:12: error: type defaults to 'int' in declaration of 'i' [-Wimplicit-int]
  178 |   register i = 0;
  178 |   register i = 0;
  178 |   register i = 0;
  178 |   register i = 0;
      |            ^
      |            ^
      |            ^
      |            ^
c2050.c: In function 'LexPrint':
c2050.c: In function 'LexPrint':
c2050.c: In function 'LexPrint':
c2050.c: In function 'LexPrint':
c2050.c:371:32: warning: operation on 'CurrentColBuffer' may be undefined [-Wsequence-point]
c2050.c:371:32: warning: operation on 'CurrentColBuffer' may be undefined [-Wsequence-point]
c2050.c:371:32: warning: operation on 'CurrentColBuffer' may be undefined [-Wsequence-point]
c2050.c:371:32: warning: operation on 'CurrentColBuffer' may be undefined [-Wsequence-point]
  371 |               CurrentColBuffer = ++CurrentColBuffer % 3;
  371 |               CurrentColBuffer = ++CurrentColBuffer % 3;
  371 |               CurrentColBuffer = ++CurrentColBuffer % 3;
  371 |               CurrentColBuffer = ++CurrentColBuffer % 3;
      |               ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
      |               ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
      |               ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
      |               ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
c2050.c: In function 'SweepBuffer_Init':
c2050.c: In function 'SweepBuffer_Init':
c2050.c: In function 'SweepBuffer_Init':
c2050.c:80:1: warning: control reaches end of non-void function [-Wreturn-type]
c2050.c:80:1: warning: control reaches end of non-void function [-Wreturn-type]
c2050.c:80:1: warning: control reaches end of non-void function [-Wreturn-type]
   80 | } /* SweepBuffer_Init */
   80 | } /* SweepBuffer_Init */
   80 | } /* SweepBuffer_Init */
      | ^
      | ^
      | ^
make: *** [Makefile:24: c2050.o] Error 1
make: *** [Makefile:24: c2050.o] Error 1
make: *** [Makefile:24: c2050.o] Error 1
make: Leaving directory '/usr/src/RPM/BUILD/c2050-0.4'
make: Leaving directory '/usr/src/RPM/BUILD/c2050-0.4'
make: Leaving directory '/usr/src/RPM/BUILD/c2050-0.4'
error: Bad exit status from /usr/src/tmp/rpm-tmp.54651 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.54651 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.54651 (%build)






RPM build errors:
RPM build errors:
RPM build errors:
    Bad exit status from /usr/src/tmp/rpm-tmp.54651 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.54651 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.54651 (%build)
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
0.03user 0.03system 0:00.07elapsed 105%CPU (0avgtext+0avgdata 17668maxresident)k
0.03user 0.03system 0:00.07elapsed 105%CPU (0avgtext+0avgdata 17668maxresident)k
0.03user 0.03system 0:00.07elapsed 105%CPU (0avgtext+0avgdata 17668maxresident)k
0inputs+0outputs (0major+7689minor)pagefaults 0swaps
0inputs+0outputs (0major+7689minor)pagefaults 0swaps
0inputs+0outputs (0major+7689minor)pagefaults 0swaps
hsh-rebuild: rebuild of `c2050-0.4-alt1.qa1.src.rpm' failed.
hsh-rebuild: rebuild of `c2050-0.4-alt1.qa1.src.rpm' failed.
hsh-rebuild: rebuild of `c2050-0.4-alt1.qa1.src.rpm' failed.
Command exited with non-zero status 1
Command exited with non-zero status 1
0.80user 1.37system 0:03.93elapsed 55%CPU (0avgtext+0avgdata 12236maxresident)k
0.80user 1.37system 0:03.93elapsed 55%CPU (0avgtext+0avgdata 12236maxresident)k
0inputs+0outputs (0major+84516minor)pagefaults 0swaps
